--- a/src/main/java/cz/vutbr/fit/pdb/component/main/main.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/main/main.fxml
@@ -1,119 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.web.WebView?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0"
             xmlns="http://javafx.com/javafx/8" fx:controller="cz.vutbr.fit.pdb.component.main.MainPresenter">
-    <right>
-        <Accordion prefHeight="530.0" prefWidth="272.0" BorderPane.alignment="CENTER">
-            <panes>
-                <TitledPane animated="false" text="Common">
-                    <content>
-                        <GridPane layoutX="-22.0" layoutY="29.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                            </rowConstraints>
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" GridPane.rowIndex="1"/>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" GridPane.rowIndex="2"/>
-                                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"
-                                          GridPane.rowIndex="2"/>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.rowIndex="3"/>
-                                <ImageView fx:id="flagView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true"
-                                           preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER"
-                                           GridPane.valignment="CENTER"/>
-                            </children>
-                        </GridPane>
-                    </content>
-                </TitledPane>
-                <TitledPane animated="false" prefHeight="480.0" prefWidth="328.0" text="Geometry">
-                    <content>
-                        <TabPane tabClosingPolicy="UNAVAILABLE">
-                            <tabs>
-                                <Tab text="Point">
-                                    <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                                                    prefWidth="200.0"/>
-                                    </content>
-                                </Tab>
-                                <Tab text="Line">
-                                    <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                                                    prefWidth="200.0"/>
-                                    </content>
-                                </Tab>
-                                <Tab text="Polygon">
-                                    <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-                                                    prefWidth="200.0"/>
-                                    </content>
-                                </Tab>
-                            </tabs>
-                        </TabPane>
-                    </content>
-                </TitledPane>
-                <TitledPane animated="false" text="Pictures">
-                    <content>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Saved pictures"/>
-                                <ListView prefHeight="200.0" prefWidth="200.0">
-                                    <VBox.margin>
-                                        <Insets bottom="10.0"/>
-                                    </VBox.margin>
-                                </ListView>
-                                <Button mnemonicParsing="false" text="Load new photo"/>
-                            </children>
-                        </VBox>
-                    </content>
-                </TitledPane>
-            </panes>
-        </Accordion>
-    </right>
     <center>
         <WebView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
     </center>
-    <bottom>
-        <VBox>
-            <children>
-                <HBox alignment="CENTER" BorderPane.alignment="CENTER">
-                    <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Timeline">
-                            <HBox.margin>
-                                <Insets left="5.0" right="5.0"/>
-                            </HBox.margin>
-                        </Text>
-                        <TextField/>
-                        <Slider prefHeight="16.0" prefWidth="542.0">
-                            <HBox.margin>
-                                <Insets left="5.0" right="5.0"/>
-                            </HBox.margin>
-                        </Slider>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Year XYZ"/>
-                    </children>
-                    <VBox.margin>
-                        <Insets top="5.0"/>
-                    </VBox.margin>
-                </HBox>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message bar  - New Interesting message">
-                    <VBox.margin>
-                        <Insets bottom="1.0" left="3.0" right="3.0" top="3.0"/>
-                    </VBox.margin>
-                </Text>
-            </children>
-        </VBox>
-    </bottom>
 </BorderPane>
