--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/rightbar.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/rightbar.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.*?>
 <Accordion xmlns:fx="http://javafx.com/fxml/1" fx:id="accordion" prefHeight="530.0" prefWidth="272.0"
            BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/8"
            fx:controller="cz.vutbr.fit.pdb.component.rightbar.RightbarPresenter">
@@ -27,7 +27,7 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" GridPane.rowIndex="2"/>
                         <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                         <TextArea fx:id="descriptionField" prefHeight="200.0" prefWidth="200.0" scaleShape="false"
-                                  GridPane.columnIndex="1" GridPane.rowIndex="2" wrapText="true"/>
+                                  wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.rowIndex="3"/>
                         <ImageView fx:id="flagView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true"
                                    preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER"
@@ -42,18 +42,82 @@
                     <tabs>
                         <Tab fx:id="pointTab" text="Point">
                             <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                                <GridPane>
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                    </rowConstraints>
+                                    <children>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X"
+                                              GridPane.halignment="CENTER"/>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y"
+                                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+                                        <TextField GridPane.columnIndex="1" fx:id="xField"/>
+                                        <TextField fx:id="yField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                    </children>
+                                </GridPane>
                             </content>
                         </Tab>
                         <Tab fx:id="lineTab" text="Line">
                             <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                                <GridPane>
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                    </rowConstraints>
+                                    <children>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="StartX"
+                                              GridPane.halignment="CENTER"/>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="StartY"
+                                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EndX"
+                                              GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EndY"
+                                              GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
+                                        <TextField fx:id="startXField" GridPane.columnIndex="1"/>
+                                        <TextField fx:id="startYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                        <TextField fx:id="endXField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                        <TextField fx:id="endYField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                                    </children>
+                                </GridPane>
                             </content>
                         </Tab>
 
                         <Tab fx:id="circleTab" text="Circle">
                             <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                                <GridPane>
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                    </rowConstraints>
+                                    <children>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterX"
+                                              GridPane.halignment="CENTER"/>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterY"
+                                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Radius"
+                                              GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+                                        <TextField fx:id="centerXField" GridPane.columnIndex="1"/>
+                                        <TextField fx:id="centerYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                        <TextField fx:id="radiusField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                    </children>
+                                </GridPane>
                             </content>
                         </Tab>
 
