--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/rightbar.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/rightbar.fxml
@@ -21,10 +21,13 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" GridPane.rowIndex="1"/>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" GridPane.rowIndex="2"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" GridPane.halignment="CENTER"
+                              GridPane.rowIndex="1"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" GridPane.halignment="CENTER"
+                              GridPane.rowIndex="2"/>
                         <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                         <TextArea fx:id="descriptionField" prefHeight="200.0" prefWidth="200.0" scaleShape="false"
                                   wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
@@ -32,6 +35,12 @@
                         <ImageView fx:id="flagView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true"
                                    preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER"
                                    GridPane.valignment="CENTER"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="From" GridPane.halignment="CENTER"
+                              GridPane.rowIndex="3"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To" GridPane.halignment="CENTER"
+                              GridPane.rowIndex="4"/>
+                        <DatePicker fx:id="fromDate" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                        <DatePicker fx:id="toDate" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
                     </children>
                 </GridPane>
             </content>
