Add Initialize database button to "File" menu.

--- a/src/main/java/cz/vutbr/fit/pdb/component/menubar/menubar.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/menubar/menubar.fxml
@@ -11,6 +11,7 @@
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
+                        <MenuItem onAction="#onInitDB" mnemonicParsing="false" text="Initialize database"/>
                         <MenuItem onAction="#onSettings" mnemonicParsing="false" text="Settings"/>
                         <MenuItem onAction="#onClose" mnemonicParsing="false" text="Close"/>
                     </items>
