--- a/src/main/java/cz/vutbr/fit/pdb/component/map/map.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/map/map.fxml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
-            fx:controller="cz.vutbr.fit.pdb.component.map.MapPresenter">
-    <children>
-        <Canvas fx:id="canvas" height="500.0" width="500.0"/>
-    </children>
-</AnchorPane>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="vbox" xmlns="http://javafx.com/javafx/8"
+      fx:controller="cz.vutbr.fit.pdb.component.map.MapPresenter"/>
