--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/rightbar.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/rightbar.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
@@ -45,126 +45,8 @@
                 </GridPane>
             </content>
         </TitledPane>
-        <TitledPane animated="false" prefHeight="480.0" prefWidth="328.0" text="Geometry">
-            <content>
-                <TabPane fx:id="geometryTabPane" tabClosingPolicy="UNAVAILABLE">
-                    <tabs>
-                        <Tab fx:id="pointTab" text="Point">
-                            <content>
-                                <GridPane>
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                    </rowConstraints>
-                                    <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X"
-                                              GridPane.halignment="CENTER"/>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y"
-                                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
-                                        <TextField GridPane.columnIndex="1" fx:id="xField"/>
-                                        <TextField fx:id="yField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                    </children>
-                                </GridPane>
-                            </content>
-                        </Tab>
-                        <Tab fx:id="lineTab" text="Line">
-                            <content>
-                                <VBox>
-                                    <children>
-                                        <ListView fx:id="lineListView" prefHeight="200.0" prefWidth="200.0"/>
-                                        <HBox>
-                                            <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X:">
-                                                    <HBox.margin>
-                                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                                                    </HBox.margin>
-                                                </Text>
-                                                <TextField fx:id="lineXField" prefWidth="40.0"/>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y:">
-                                                    <HBox.margin>
-                                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                                                    </HBox.margin>
-                                                </Text>
-                                                <TextField fx:id="lineYField" prefWidth="40.0">
-                                                    <HBox.margin>
-                                                        <Insets right="10.0"/>
-                                                    </HBox.margin>
-                                                </TextField>
-                                                <Button onAction="#addLinePoint" mnemonicParsing="false"
-                                                        text="Add new"/>
-                                            </children>
-                                        </HBox>
-                                    </children>
-                                </VBox>
-                            </content>
-                        </Tab>
+        <TitledPane fx:id="geometryTitledPane" animated="false" prefHeight="480.0" prefWidth="328.0" text="Geometry">
 
-                        <Tab fx:id="circleTab" text="Circle">
-                            <content>
-                                <GridPane>
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                    </rowConstraints>
-                                    <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterX"
-                                              GridPane.halignment="CENTER"/>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CenterY"
-                                              GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Radius"
-                                              GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
-                                        <TextField fx:id="centerXField" GridPane.columnIndex="1"/>
-                                        <TextField fx:id="centerYField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                        <TextField fx:id="radiusField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                                    </children>
-                                </GridPane>
-                            </content>
-                        </Tab>
-
-                        <Tab fx:id="polygonTab" text="Polygon">
-                            <content>
-                                <VBox>
-                                    <children>
-                                        <ListView fx:id="polygonListView" prefHeight="200.0" prefWidth="200.0"/>
-                                        <HBox>
-                                            <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X:">
-                                                    <HBox.margin>
-                                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                                                    </HBox.margin>
-                                                </Text>
-                                                <TextField fx:id="polygonXField" prefWidth="40.0"/>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y:">
-                                                    <HBox.margin>
-                                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                                                    </HBox.margin>
-                                                </Text>
-                                                <TextField fx:id="polygonYField" prefWidth="40.0">
-                                                    <HBox.margin>
-                                                        <Insets right="10.0"/>
-                                                    </HBox.margin>
-                                                </TextField>
-                                                <Button onAction="#addPolygonPoint" mnemonicParsing="false"
-                                                        text="Add new"/>
-                                            </children>
-                                        </HBox>
-                                    </children>
-                                </VBox>
-                            </content>
-                        </Tab>
-                    </tabs>
-                </TabPane>
-            </content>
         </TitledPane>
         <TitledPane animated="false" text="Pictures">
             <content>
