--- a/src/main/java/cz/vutbr/fit/pdb/component/map/map.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/map/map.fxml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.web.WebView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="vbox" xmlns="http://javafx.com/javafx/8"
-      fx:controller="cz.vutbr.fit.pdb.component.map.MapPresenter"/>
+<!--<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="vbox" xmlns="http://javafx.com/javafx/8"
+      fx:controller="cz.vutbr.fit.pdb.component.map.MapPresenter"/>-->
+<AnchorPane  xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+             fx:controller="cz.vutbr.fit.pdb.component.map.MapPresenter">
+    <WebView fx:id="webview" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+    <!--layoutX="100.0" layoutY="176.0" prefHeight="459.0" prefWidth="644.0" -->
+</AnchorPane>
