set VIEW as default application mode

--- a/src/main/java/cz/vutbr/fit/pdb/component/toolbar/toolbar.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/toolbar/toolbar.fxml
@@ -13,7 +13,7 @@
             </HBox.margin>
         </Text>
 
-        <HBox fx:id="drawingModeButtons">
+        <HBox disable="true" fx:id="drawingModeButtons">
             <children>
                 <Button fx:id="pointBtn" mnemonicParsing="false" onAction="#onPoint" text="Point">
                     <HBox.margin>
