--- a/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/polygoninfo/polygoninfo.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/rightbar/geometry/polygoninfo/polygoninfo.fxml
@@ -11,7 +11,7 @@
             <content>
                 <VBox>
                     <children>
-                        <ListView fx:id="polygonListView" prefHeight="200.0" prefWidth="200.0"/>
+                        <ListView fx:id="pointsListView" prefHeight="200.0" prefWidth="200.0"/>
                         <HBox>
                             <children>
                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X:">
@@ -19,18 +19,18 @@
                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                                     </HBox.margin>
                                 </Text>
-                                <TextField fx:id="polygonXField" prefWidth="40.0"/>
+                                <TextField fx:id="xField" prefWidth="40.0"/>
                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Y:">
                                     <HBox.margin>
                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                                     </HBox.margin>
                                 </Text>
-                                <TextField fx:id="polygonYField" prefWidth="40.0">
+                                <TextField fx:id="yField" prefWidth="40.0">
                                     <HBox.margin>
                                         <Insets right="10.0"/>
                                     </HBox.margin>
                                 </TextField>
-                                <Button onAction="#addPolygonPoint" mnemonicParsing="false"
+                                <Button onAction="#addNewPoint" mnemonicParsing="false"
                                         text="Add new"/>
                             </children>
                         </HBox>
