- color text in toolbar shifted

--- a/src/main/java/cz/vutbr/fit/pdb/component/toolbar/toolbar.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/toolbar/toolbar.fxml
@@ -35,11 +35,6 @@
                         <Insets bottom="5.0" top="5.0"/>
                     </HBox.margin>
                 </Button>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Color:">
-                    <HBox.margin>
-                        <Insets left="5.0" right="5.0" top="10.0"/>
-                    </HBox.margin>
-                </Text>
                 <Button mnemonicParsing="false" onAction="#onFinishDrawing" text="Complete current entity">
                     <HBox.margin>
                         <Insets bottom="5.0" left="5.0" top="5.0"/>
@@ -47,11 +42,18 @@
                 </Button>
             </children>
         </HBox>
-        <ComboBox fx:id="colors" maxHeight="20.0" maxWidth="20.0" prefHeight="20.0" prefWidth="20.0">
-            <HBox.margin>
-                <Insets bottom="5.0" top="5.0"/>
-            </HBox.margin>
-        </ComboBox>
+        <HBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Color:">
+                <HBox.margin>
+                    <Insets left="5.0" right="5.0" top="10.0"/>
+                </HBox.margin>
+            </Text>
+            <ComboBox fx:id="colors" maxHeight="20.0" maxWidth="20.0" prefHeight="20.0" prefWidth="20.0">
+                <HBox.margin>
+                    <Insets bottom="5.0" top="5.0"/>
+                </HBox.margin>
+            </ComboBox>
+        </HBox>
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mode:">
             <HBox.margin>
                 <Insets left="5.0" right="5.0"/>
