--- a/src/main/java/cz/vutbr/fit/pdb/component/blindmapcontrol/blindmapcontrol.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/blindmapcontrol/blindmapcontrol.fxml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="cz.vutbr.fit.pdb.component.blindmapcontrol.BlindMapControlPresenter"
-          maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-          prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8">
+<?import javafx.scene.text.Text?>
+<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+          minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8"
+          fx:controller="cz.vutbr.fit.pdb.component.blindmapcontrol.BlindMapControlPresenter">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     </rowConstraints>
+    <children>
+        <Text fx:id="titleText" strokeType="OUTSIDE" strokeWidth="0.0" text="NULL" GridPane.halignment="CENTER"/>
+        <ImageView fx:id="imageView1" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.rowIndex="1"/>
+        <ImageView fx:id="imageView2" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.rowIndex="2"/>
+        <ImageView fx:id="imageView3" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.rowIndex="3"/>
+    </children>
 </GridPane>
