--- a/src/main/java/cz/vutbr/fit/pdb/component/blindmapcontrol/blindmapcontrol.fxml
+++ b/src/main/java/cz/vutbr/fit/pdb/component/blindmapcontrol/blindmapcontrol.fxml
@@ -3,8 +3,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-          minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8"
           fx:controller="cz.vutbr.fit.pdb.component.blindmapcontrol.BlindMapControlPresenter">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -14,14 +13,20 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <children>
         <Text fx:id="titleText" strokeType="OUTSIDE" strokeWidth="0.0" text="NULL" GridPane.halignment="CENTER"/>
-        <ImageView fx:id="imageView1" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
-                   GridPane.rowIndex="1"/>
-        <ImageView fx:id="imageView2" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
-                   GridPane.rowIndex="2"/>
-        <ImageView fx:id="imageView3" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"
-                   GridPane.rowIndex="3"/>
+        <ImageView fx:id="imageView1" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1"
+                   GridPane.valignment="CENTER" GridPane.vgrow="NEVER"/>
+        <ImageView fx:id="imageView2" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2"
+                   GridPane.valignment="CENTER" GridPane.vgrow="NEVER"/>
+        <ImageView fx:id="imageView3" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="3"
+                   GridPane.valignment="CENTER" GridPane.vgrow="NEVER"/>
+        <Text fx:id="correctAnswers" strokeType="OUTSIDE" strokeWidth="0.0" text="NULL" GridPane.halignment="CENTER"
+              GridPane.rowIndex="4"/>
     </children>
 </GridPane>
